--- a/app/src/main/res/layout/activity_bottom3.xml
+++ b/app/src/main/res/layout/activity_bottom3.xml
@@ -20,7 +20,7 @@
         <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:videoId="A2kHURY746E" />
+            app:videoId="EV0F_3S7Sks" />
 
         <TextView
             android:textColor="@color/white"
@@ -28,7 +28,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_width="150dp"
             android:layout_height="45dp"
-            android:text="벤치프레스"
+            android:text="레그 프레스"
             android:textAlignment="center"
             android:textSize="30dp"
             android:background="@drawable/textview"/>
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:gravity="center_horizontal"
-            android:text="  1. 벤치에 누운상태에서 바벨을 어깨너비보다 조금 넓게 잡고 위로 들어올린다."
+            android:text="  1. 엉덩이와 허리가 의자에 완전히 붙도록 밀착하여 앉고, 두 발을 어깨 너비만큼 벌린다."
             android:textSize="16dp"
             android:textColor="#23346C"
             />
@@ -59,7 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:gravity="center"
-            android:text="  2. 가슴 근육의 이완을 느끼며 팔을 굽혀 바벨을 가슴 방향으로 내린다."
+            android:text="  2. 안전핀을 제거하고, 중량의 자극을 느끼며 무릎을 굽혀준다. 엉덩이와 허리가 뜨지않을 깊이까지 중량판을 내린다.)"
             android:textSize="16dp"
             android:textColor="#23346C" />
 
@@ -69,7 +69,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:gravity="center"
-            android:text="  3. 가슴 근육의 수축을 느끼며 몸의 수직방향으로 바벨을 밀어올린다."
+            android:text="  3. 복부에 힘을 유지한채로, 중량판을 지긋이 밀어 올린다."
             android:textSize="16dp"
             android:textColor="#23346C" />
 
@@ -90,7 +90,7 @@
         <TextView
             android:layout_marginTop="20dp"
             android:layout_gravity="center"
-            android:text="                   바벨                             무게/횟수            "
+            android:text="                   머신                             무게/횟수            "
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
