--- a/app/src/main/res/layout/activity_aerobic0.xml
+++ b/app/src/main/res/layout/activity_aerobic0.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CardViewTEST"
+    tools:context=".Aerobic0"
     android:layout_margin="30dp"
     app:cardCornerRadius="30dp">
     <ImageView
