--- a/app/src/main/res/layout/activity_diary.xml
+++ b/app/src/main/res/layout/activity_diary.xml
@@ -28,12 +28,12 @@
 
     <Button
         android:id="@+id/btnWrite"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:enabled="false"
         android:text="저장"
-        android:textColor="#fddb00"
-        android:backgroundTint="#23346C"
+        android:textColor="@color/black"
+        android:background="@drawable/button"
         />
 
 </LinearLayout>
