--- a/app/src/main/res/layout/fragment_bmi.xml
+++ b/app/src/main/res/layout/fragment_bmi.xml
@@ -7,8 +7,11 @@
     android:orientation="vertical">
 
     <TextView
+        android:layout_marginTop="50dp"
         android:layout_gravity="center"
         android:text="BMI"
+        android:textSize="40dp"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
