--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,6 +7,16 @@
     android:orientation="vertical"
     tools:context=".HomeFragment">
 
+
+    <TextView
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:text="날씨"
+        android:fontFamily="@font/notosans_bold"
+        android:layout_marginLeft="20dp"
+        android:textSize="30dp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -59,7 +69,7 @@
             android:layout_marginRight="20dp"
             android:padding="12dp"
             android:text="기온:"
-            android:textSize="18sp" />
+            android:textSize="30sp" />
         <TextView
             android:id="@+id/tvTempHi"
             android:layout_width="wrap_content"
@@ -76,7 +86,7 @@
             android:layout_height="wrap_content"
 
             android:text="최저:"
-            android:layout_marginLeft="40dp"
+            android:layout_marginLeft="20dp"
             android:textSize="15dp"
             android:layout_below="@id/weather"
             android:layout_alignParentRight="true"
@@ -92,12 +102,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/notosans_bold"
+
             android:textSize="17dp"
             android:text="체감온도:"/>
 
         </RelativeLayout>
     </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:text="추천영상"
+        android:fontFamily="@font/notosans_bold"
+        android:layout_marginLeft="20dp"
+        android:textSize="30dp"/>
     <LinearLayout
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -105,7 +125,7 @@
             android:id="@+id/youtube_player_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
+            android:padding="20dp"
             app:videoId="Hx8Lc_0hUaI"
             app:autoPlay="false"
              />
