--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -13,8 +13,8 @@
             android:layout_marginTop="50dp"
             android:id="@+id/img"
             android:src="@drawable/user"
-            android:layout_width="130dp"
-            android:layout_height="130dp"/>
+            android:layout_width="150dp"
+            android:layout_height="150dp"/>
 
         <TextView
             android:layout_toRightOf="@+id/img"
@@ -48,6 +48,16 @@
             android:layout_below="@+id/gender"
             android:textSize="15sp"
             />
+        <TextView
+            android:layout_toRightOf="@+id/img"
+            android:id="@+id/age"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/notosans_bold"
+            android:text="연령대: "
+            android:layout_below="@+id/email"
+            android:textSize="15sp"
+            />
 
     </RelativeLayout>
 
@@ -68,10 +78,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/notosans_bold"
-        android:background="@drawable/button"
-        android:text="회원 탈퇴"
-        android:textSize="15sp"
+        android:background="@color/white"
         android:visibility="invisible"
+        android:textSize="15sp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
