--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -4,9 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Timer">
+    android:layout_marginTop="90dp"
+    tools:context=".TimerFragment">
+
+
+    <TextView
+
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:text="TIMER"
+        android:layout_marginLeft="160dp"
+        android:layout_gravity="center_horizontal"
+        android:fontFamily="@font/notosans_bold"
+        android:textSize="30dp"/>
+
+
 
     <Chronometer
+        android:layout_marginTop="100dp"
         android:id="@+id/chronometer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,7 +32,7 @@
         android:id="@+id/runImage"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:src="@drawable/run1"
+
         android:layout_below="@+id/chronometer"
         android:layout_marginTop="80dp"
         android:visibility="invisible"/>
@@ -46,7 +61,7 @@
         android:orientation="horizontal"
         android:gravity="center_horizontal"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="70dp">
+        android:layout_marginBottom="110dp">
 
         <Button
             android:id="@+id/startButton"
