--- a/app/src/main/res/layout/activity_aerobic0.xml
+++ b/app/src/main/res/layout/activity_aerobic0.xml
@@ -8,10 +8,12 @@
     android:layout_margin="30dp"
     app:cardCornerRadius="30dp">
     <ImageView
+        android:scaleType="centerCrop"
         android:layout_marginTop="60dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:src="@drawable/bg"/>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
