--- a/app/src/main/res/layout/activity_top6.xml
+++ b/app/src/main/res/layout/activity_top6.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CardViewTEST"
     android:layout_margin="30dp"
     app:cardCornerRadius="30dp">
     <ImageView
+        android:scaleType="centerCrop"
         android:layout_marginTop="60dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:src="@drawable/bg"/>
     <LinearLayout
         android:layout_width="wrap_content"
@@ -26,7 +26,7 @@
             android:textColor="@color/white"
             android:layout_marginTop="30dp"
             android:layout_gravity="center_horizontal"
-            android:layout_width="200dp"
+            android:layout_width="250dp"
             android:layout_height="45dp"
             android:text="하이퍼 익스텐션"
             android:textAlignment="center"
